import groovy.json.JsonSlurper

plugins {
    id 'java-library'
    id 'net.fabricmc.fabric-loom' version '1.15-SNAPSHOT' apply(false)
    id 'net.neoforged.moddev' version '2.0.141' apply(false)
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
    id "dev.nanite.nanite-plugin" version "0.1.0-SNAPSHOT"
}

nanite {
    changelog {
        file = file("./CHANGELOG.md")
    }
}

allprojects {
    apply plugin: 'idea'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    version = naniteUtils.createModVersion()
    group = maven_group

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 25
    }

    idea {
        module {
            downloadSources = true
            downloadJavadoc = true
        }
    }
}

subprojects {
    base {
        archivesName = "${archives_base_name}-$project.name"
    }

    if (project.name != "common") {
        dependencies {
            api project(":common")
        }

        jar {
            from project(":common").sourceSets.main.output
        }
    }

    def replaceProperties = [
            mod_id: mod_id,
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neoforge_version: neoforge_version,
            neoforge_version_range: neoforge_version_range,
            fabric_loader_version: fabric_loader_version,
            fabric_api_version: fabric_api_version,
            version: version,
    ]

    processResources {
        inputs.properties replaceProperties

        filesMatching(["META-INF/neoforge.mods.toml", "fabric.mod.json"]) {
            expand replaceProperties
        }
    }

    repositories {
        maven {
            url "https://maven.nanite.dev/releases"
        }
    }

    publishing {
        publications {
            register("maven${project.name.capitalize()}", MavenPublication) {
                artifactId = "${rootProject.archives_base_name}-${project.name}"
                from components.java
            }
        }

        repositories {
            def token = providers.environmentVariable("NANITE_TOKEN");
            if (token.isPresent()) {
                maven {
                    url "https://maven.nanite.dev/releases"
                    credentials {
                        username = "nanite"
                        password = providers.environmentVariable("NANITE_TOKEN").get()
                    }
                }
            }
        }
    }
}

// Make publishMods depend on 'createChangelog' task
tasks.named("publishMods") {
    dependsOn tasks.named("createChangelog")
}

publishMods {
    dryRun = providers.environmentVariable("CURSE_TOKEN").getOrNull() == null
    changelog = tasks.named("createChangelog").flatMap { it.outputFile }.get().asFile.text
    version = project.version
    type = STABLE

    def createOptions = { String modLoader -> publishOptions {
        file = project.provider { project(":${modLoader}").tasks.jar }.flatMap { it.archiveFile }
        displayName = "${project.name} ${modLoader.capitalize()} ${project.version}"
        modLoaders.add(modLoader)
    }}

    def curseForgeOptions = curseforgeOptions {
        accessToken = providers.environmentVariable("CURSE_TOKEN")
        projectId = "${curseforge_id}"
        supported_minecraft_versions.split(",").each {
            minecraftVersions.add(it.trim())
        }
    }

    def modrinthOptions = modrinthOptions {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = "${modrinth_id}"
        supported_minecraft_versions.split(",").each {
            minecraftVersions.add(it.trim())
        }
    }

    curseforge("curseforgeFabric") {
        from(curseForgeOptions, createOptions("fabric"))
        requires("fabric-api")
        requires("nanite-library")
    }

    curseforge("curseforgeNeoForge") {
        from(curseForgeOptions, createOptions("neoforge"))
        requires("nanite-library")
    }

    if (providers.environmentVariable("MODRINTH_TOKEN").getOrNull() != null) {
        modrinth("modrinthFabric") {
            from(modrinthOptions, createOptions("fabric"))
            requires("fabric-api")
            //requires("nanite-library") Soon!
        }

        modrinth("modrinthNeoforge") {
            from(modrinthOptions, createOptions("neoforge"))
            //requires("nanite-library") Soon!
        }
    }
}
